added all pages

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,6 @@
-<p>home-page works!</p>
+<div class="todos">
+    <app-todo></app-todo>
+    <app-todo></app-todo>
+    <app-todo></app-todo>
+    <app-todo></app-todo>
+</div>
