--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,3 +1,7 @@
-<p>main-layout works!</p>
+<div class="navbar main">
+    <h1>Angular ToDo</h1>
+</div>
 
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
