--- a/src/app/task-page/task-page.component.html
+++ b/src/app/task-page/task-page.component.html
@@ -1,1 +1,25 @@
-<p>task-page works!</p>
+<div class="container">
+    <div class="task">
+        <div class="task-header">
+            <h1>
+                Task title
+            </h1>
+            <button routerLink="/" mat-raised-button color="primary">To main page</button>
+        </div>
+        <div class="info">
+            <div class="author">
+                There can be author
+            </div>
+            <div class="date">
+                12.12.20
+            </div>
+        </div>
+        <div class="task-content">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eos suscipit, optio quod itaque et
+            deserunt
+            laborum! Tempora provident quam vel vitae repudiandae repellat. Maxime illum aut ab illo vitae doloremque,
+            dolore recusandae vel esse saepe numquam ea laborum eveniet veritatis velit atque! Fuga quam minima velit
+            necessitatibus nulla veritatis.
+        </div>
+    </div>
+</div>
