--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,40 @@
-<p>login-page works!</p>
+<!-- <form class="card" [formGroup]="loginForm" (ngSubmit)="submit()">
+    <div class="card-title">
+        <h2>Enter to admin panel</h2>
+    </div>
+    <div class="form-control">
+        <label for="email">Email:</label>
+        <input id="email" type="email">
+        <div class="validation">
+            <small>error</small>
+        </div>
+    </div>
+    <div class="form-control">
+        <label for="password">Password:</label>
+        <input id="password" type="password">
+        <div class="validation">
+            <small>error</small>
+        </div>
+    </div>
+    <div class="form-btn">
+        <button mat-raised-button type="submit" color="primary" [disabled]="loginForm.invalid">Login</button>
+    </div>
+
+</form> -->
+
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+            placeholder="Ex. pat@example.com">
+        <mat-hint>Errors appear instantly!</mat-hint>
+        <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+            Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+            Email is <strong>required</strong>
+        </mat-error>
+    </mat-form-field>
+</form>
+
+<!-- Что бы работали кастомные стили нужно в главный модуль импортировать CustomMaterialModule -->
