--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -1,2 +1,21 @@
-<h2>Admin Layout</h2>
-<router-outlet></router-outlet>
+<div class="navbar">
+    <h1>
+        <a routerLink="/">Angular admin</a>
+    </h1>
+
+    <ul>
+        <li routerLinkActive="active">
+            <a [routerLink]="['/admin', 'dashboard']">Home</a>
+        </li>
+        <li routerLinkActive="active">
+            <a [routerLink]="['/admin', 'create']">Create</a>
+        </li>
+        <li>
+            <a href="#" (click)="logout($event)">Home</a>
+        </li>
+    </ul>
+</div>
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
