--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<form class="card" [formGroup]="loginForm" (ngSubmit)="submit()">
+<!-- <form class="card" [formGroup]="loginForm" (ngSubmit)="submit()">
     <div class="card-title">
         <h2>Enter to admin panel</h2>
     </div>
@@ -23,40 +23,45 @@
         </div>
     </div>
     <div class="form-btn">
-        <button mat-raised-button type="submit" color="primary">Login</button>
-        <!-- [disabled]="loginForm.invalid" -->
+        <button mat-raised-button type="submit" color="primary" [disabled]="loginForm.invalid">Login</button>
+
     </div>
 
-</form>
+</form> -->
 
-<!-- <form class="card">
+<form class="card" [formGroup]="loginForm">
     <div class="card-title">
         <h2>Enter to admin panel</h2>
     </div>
-    <mat-form-field appearance="outline" class="custom-input">
-        <mat-label>Email</mat-label>
-        <input matInput [formControl]="email" formControlName="email" [errorStateMatcher]="matcher"
-            placeholder="Ex. pat@example.com">
+    <div class="wrap">
+        <mat-form-field appearance="outline" class="custom-input">
+            <mat-label>Email</mat-label>
+            <input matInput formControlName="email" formControlName="email" placeholder="Ex. pat@example.com"
+                autocomplete="email">
+            <mat-error id="invalidEmailError" *ngIf="loginForm.controls['email'].hasError('email')">
+                Please enter a valid email address
+            </mat-error>
+            <mat-error id="requiredEmailError" *ngIf="loginForm.controls['email'].hasError('required')">
+                Email is
+                <strong>required</strong>
+            </mat-error>
+        </mat-form-field>
 
-        <mat-error *ngIf="email.hasError('email') && !email.hasError('required')">
-            Please enter a valid email address
-        </mat-error>
-        <mat-error *ngIf="email.hasError('required')">
-            Email is <strong>required</strong>
-        </mat-error>
-    </mat-form-field>
+        <mat-form-field appearance="outline" class="example-full-width" class="custom-input">
+            <mat-label>Password</mat-label>
+            <input matInput formControlName="password" placeholder="Ex. pat@example.com"
+                autocomplete="current-password">
+            <mat-error id="requiredPasswordError" *ngIf="loginForm.controls['email'].hasError('required')">
+                Password is
+                <strong>required</strong>
+            </mat-error>
+        </mat-form-field>
+    </div>
 
-    <mat-form-field appearance="outline" class="example-full-width" class="custom-input">
-        <mat-label>Password</mat-label>
-        <input matInput [formControl]="password" [errorStateMatcher]="matcher" placeholder="Ex. pat@example.com">
-
-        <mat-error *ngIf="password.hasError('email') && !password.hasError('required')">
-            Please enter a valid email address
-        </mat-error>
-        <mat-error *ngIf="password.hasError('required')">
-            Password is <strong>required</strong>
-        </mat-error>
-    </mat-form-field>
-</form> -->
+    <div class="form-btn">
+        <button mat-raised-button type="submit" color="primary" (click)="submit()"
+            [disabled]="loginForm.invalid">Login</button>
+    </div>
+</form>
 
 <!-- Что бы работали кастомные стили нужно в главный модуль импортировать CustomMaterialModule -->
