--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -67,7 +67,8 @@
     </div>
 
     <div class="form-btn">
-        <button mat-raised-button type="submit" color="primary" [disabled]="loginForm.invalid">Login</button>
+        <button mat-raised-button type="submit" color="primary" [disabled]="loginForm.invalid ||
+        submitted">Login</button>
     </div>
 </form>
 
