--- a/src/app/admin/login-page/login-page.component.scss
+++ b/src/app/admin/login-page/login-page.component.scss
@@ -37,3 +37,11 @@
 .custom-input {
   width: 100%;
 }
+
+.alert {
+  background-color: red;
+  padding: 10px;
+  color: white;
+  margin-bottom: 15px;
+  font-weight: 500;
+}
