--- a/src/app/admin/create-page/create-page.component.html
+++ b/src/app/admin/create-page/create-page.component.html
@@ -1,1 +1,34 @@
-<p>create-page works!</p>
+<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+    <div class="card-title">
+        <h1>Created task</h1>
+    </div>
+
+
+    <mat-form-field class="custom-input" appearance="outline" class="custom-input">
+        <mat-label for="title">Task name:</mat-label>
+        <input matInput type="text" id="title" formControlName="title" formControlName="title" placeholder="Name..."
+            autocomplete="title">
+        <mat-error id="requiredEmailError" *ngIf="form.controls['title'].hasError('required')">
+            Enter the name task
+        </mat-error>
+    </mat-form-field>
+
+    <div class="task-content">
+        <h1>Task content</h1>
+        <quill-editor formControlName="text"></quill-editor>
+    </div>
+
+    <mat-form-field class="custom-input" appearance="outline" class="custom-input">
+        <mat-label for="author">Author name:</mat-label>
+        <input matInput type="text" id="author" formControlName="author" formControlName="author" placeholder="Name..."
+            autocomplete="author">
+        <mat-error id="requiredEmailError" *ngIf="form.controls['author'].hasError('required')">
+            Enter the author name
+        </mat-error>
+    </mat-form-field>
+
+
+    <div class="form-btn">
+        <button mat-raised-button type="submit" color="primary" [disabled]="form.invalid">Create</button>
+    </div>
+</form>
