--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,13 +19,15 @@ $angular-ToDo-warn: mat-palette($mat-red);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$angular-ToDo-theme: mat-light-theme((
-  color: (
-    primary: $angular-ToDo-primary,
-    accent: $angular-ToDo-accent,
-    warn: $angular-ToDo-warn,
+$angular-ToDo-theme: mat-light-theme(
+  (
+    color: (
+      primary: $angular-ToDo-primary,
+      accent: $angular-ToDo-accent,
+      warn: $angular-ToDo-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -72,6 +73,8 @@ $angular-ToDo-theme: mat-light-theme(
 /* You can add global styles to this file, and also import other style files */
 
 @import "./typography";
+@import "~quill/dist/quill.core.css";
+@import "~quill/dist/quill.snow.css";
 
 * {
   box-sizing: border-box;
@@ -154,5 +157,11 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
