--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="tasks.length; else loader">
     <div class="form-control">
-        <input type="text" placeholder="Find task">
+        <input type="text" placeholder="Find task" [(ngModel)]="searchStr">
     </div>
     <table>
         <thead>
@@ -13,7 +13,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let task of tasks; let idx = index">
+            <tr *ngFor="let task of tasks | searchTasks:searchStr; let idx = index">
                 <td>{{idx + 1}}</td>
                 <td>{{task.author}}</td>
                 <td>{{task.title}}</td>
