--- a/src/app/admin/edit-page/edit-page.component.html
+++ b/src/app/admin/edit-page/edit-page.component.html
@@ -21,7 +21,8 @@
 
 
         <div class="form-btn">
-            <button mat-raised-button type="submit" color="primary" [disabled]="form.invalid">Create</button>
+            <button mat-raised-button type="submit" color="primary"
+                [disabled]="form.invalid || submitted">Create</button>
         </div>
     </form>
 </div>
