--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -1,3 +1,5 @@
+<app-alert></app-alert>
+
 <div class="navbar">
     <h1>
         <a routerLink="/">Angular admin</a>
@@ -11,7 +13,7 @@
             <a [routerLink]="['/admin', 'create']">Create</a>
         </li>
         <li>
-            <a href="#" (click)="logout($event)">Home</a>
+            <a href="#" (click)="logout($event)">Logout</a>
         </li>
     </ul>
 </div>
